@@ -163,7 +163,7 @@ commonText.scrollExplanation|(Tipp: Halte STRG gedrückt und klicke mit der Maus
 commonText.default|Standard
 commonText.imageSelected|Bild ausgewählt
 commonText.selectImage|Bild auswählen
-commonText.nameAlreadyInUse|Der eigegebene Name wird schon benutzt.
+commonText.nameAlreadyInUse|Der eingegebene Name wird schon benutzt.
 commonText.developmentCost.spinner|Der eingestellte Preis muss bezahlt werden, wenn ein Spiel mit diesem Feature erstellt wird.
 commonText.notAvailable|nicht verfügbar
 commonText.enterName|ENTER NAME
@@ -376,7 +376,7 @@ mod.npcEngine.addMod.components.unlockYear.additionalToolTip|Das Erscheinungsjah
 mod.npcEngine.addMod.components.selectGenre|Wähle das Genre aus, welches das Spezialgenre für die Engine sein soll:<br>Werden mehrere Genres ausgewählt, so werden<br>mehrere Engines erstellt, je eine für jedes ausgewählte Genre.<br>Dabei wird der Name des Genres dann hinter den Namen der Engine gehängt.
 mod.npcEngine.addMod.components.selectPlatform|Wähle die Plattform aus, welche die Spezialplattform für die Engine sein soll:
 mod.npcEngine.addMod.components.spinner.share.toolTip|Lege die Gewinnbeteiligung für die Engine fest.<br>Wenn ein Spiel mit dieser Engine erstellt wird, wird der Betrag (in %) an den Engine-Entwickler bezahlt.
-mod.npcEngine.addMod.components.spinner.cost.toolTip|<br>Lege den Preis für die Engine fest.<br>Dieser Preis muss bezahlt werden, damit die Engine für ein Spiel verwendet werden kann.
+mod.npcEngine.addMod.components.spinner.cost.toolTip|Lege den Preis für die Engine fest.<br>Dieser Preis muss bezahlt werden, damit die Engine für ein Spiel verwendet werden kann.
 mod.npcEngine.addMod.optionPaneMessage.multipleGenres|<html>Es wurden mehrere Genres ausgewählt.<br>Für jedes Genre wird eine eigene Engine erstellt.<br><br>Die folgenden Werte werden für die Engine verwendet:
 mod.npcEngine.addMod.optionPaneMessage.multipleGenres.finished|Engines wurden erfolgreich hinzugefügt!
 mod.npcEngine.addMod.noPlatformSelected|Bitte wähle zu erst eine Plattform aus!
@@ -621,16 +621,6 @@ dialog.genreManager.addGenre.npcGamesList.added|wurde erfolgreich<br>zur Npc_Gam
 dialog.genreManager.addGenre.npcGamesList.error.1|Fehler beim hinzufügen der genre id
 dialog.genreManager.addGenre.npcGamesList.error.2|zur NpcGamesList<br>Bitte versuche es mit Administartorrechten erneut.<br>Fehler:
 
-dialog.genreHelper.addRandomizedGenre.title|Zufälliges Genre hinzufügen
-dialog.genreHelper.addRandomizedGenre.enterGenreName|GIB EINEN GENRE NAMEN EIN
-dialog.genreHelper.addRandomizedGenre.enterGenreDescription|GIB EINE BESCHREIBUNG EIN
-dialog.genreHelper.addRandomizedGenre.button.addNameTranslations.toolTip|<html>Klicke hier, um Übersetzungen für den Genre Namen hinzuzufügen.<br>Der im Haupttextfeld eingegebene Wert wird als englische Übersetzung verwendet
-dialog.genreHelper.addRandomizedGenre.button.addDescriptionTranslations.toolTip|<html>Klicke hier, um Übersetzungen für die Genre Beschreibung hinzuzufügen.<br>Der im Haupttextfeld eingegebene Wert wird als englische Übersetzung verwendet
-dialog.genreHelper.addRandomizedGenre.button.addGenreIcon.toolTip|Klicke, um eine PNG-Datei auszuwählen, die das Genresymbol sein soll
-dialog.genreHelper.addRandomizedGenre.button.addGenreScreenshots.toolTip|Klicke hier, um PNG-Bilder auszuwählen, die als Spiel-Screenshots verwendet werden sollen
-dialog.genreHelper.addRandomizedGenre.checkBox.showSummary|Genre Zusammenfassung anzeigen
-dialog.genreHelper.addRandomizedGenre.checkBox.showSummary.toolTip|Aktiviere diese Option, um die Genreübersicht angezeigt zu bekommen
-dialog.genreHelper.addRandomizedGenre.addGenreIcon.iconSet|Genre Icon ausgewählt
 dialog.genreHelper.getGenreScreenshots.message|<html>Klicken auf Durchsuchen oder gib den Bildpfad manuell ein.<br>Klicke auf OK, wenn der Bildpfad festgelegt ist.<br> Dadurch wird der Screenshot zu einer Liste von Screenshots hinzugefügt, die auf der Entwicklungsfortschrittsseite angezeigt werden.<br>Hinweis: Die Bilddatei sollte eine ".png" -Datei sein und das Seitenverhältnis sollte 4: 3 betragen
 dialog.genreHelper.getGenreScreenshots.imageFileAdded|Bild wurde hinzugefügt.
 dialog.genreHelper.getGenreScreenshots.imageFilesAdded|Bilder wurden hinzugefügt.
@@ -886,8 +876,6 @@ window.main.mods.import.getMoreMods.confirmDialog|Soll die Webseite geöffnet we
 window.main.mods.import.getMoreMods.confirmDialog.title|Seite öffnen?
 window.main.mods.genres|Genres
 window.main.mods.genres.addGenre|Genre hinzufügen
-window.main.mods.genres.addRandomGenre|Zufälliges Genre hinzufügen
-window.main.mods.genres.addRandomGenre.toolTip|<html>Klicke hier, um ein zufälliges Genre hinzuzufügen.<br>Du musst nur einen Namen und eine Beschreibung eingeben.<br>Optional können auch ein Symbol oder Screenshots hinzugefügt werden.
 window.main.mods.genres.removeGenre|Genre entfernen
 window.main.mods.themes|Themen
 window.main.mods.themes.addTheme|Thema hinzufügen
